#2 - fix: layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,6 @@
   }
 }
 
-a:hover {
-  color: rgb(59 130 246);
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
